@@ -1509,8 +1509,8 @@ public class HandleLayer extends JPanel implements MouseListener, MouseMotionLis
                     } 
                     mf = resizingHintFormat;                                        
                 }
-                mouseHint = mf.format(new Object[] { new Integer(size.width),
-                                                     new Integer(size.height) });
+                mouseHint = mf.format(new Object[] { Integer.valueOf(size.width),
+                                                     Integer.valueOf(size.height) });
             }
         } else {
             resizeType = 0;
@@ -1773,7 +1773,7 @@ public class HandleLayer extends JPanel implements MouseListener, MouseMotionLis
             if ((constraints == null) && metacomp.getBeanInstance() instanceof Component) {
                 int index = laysup.getNewIndex(cont, contDel, (Component)metacomp.getBeanInstance(), -1, p, hotSpot);
                 if (index != -1) {
-                    constraints = new Integer(index);
+                    constraints = Integer.valueOf(index);
                 }
             }
             return constraints;
