@@ -66,14 +66,14 @@ public class RADMenuComponent extends RADMenuItemComponent implements ComponentC
     /** Initialization of supportedMenus map. */
     static {
         supportedMenus = new HashMap<Integer,Class[]>();
-        supportedMenus.put(new Integer(T_MENUBAR),
+        supportedMenus.put(Integer.valueOf(T_MENUBAR),
                            new Class[] { Menu.class });
-        supportedMenus.put(new Integer(T_MENU),
+        supportedMenus.put(Integer.valueOf(T_MENU),
                            new Class[] { MenuItem.class,
                                          CheckboxMenuItem.class,
                                          Menu.class,
                                          Separator.class });
-        supportedMenus.put(new Integer(T_POPUPMENU),
+        supportedMenus.put(Integer.valueOf(T_POPUPMENU),
                            new Class[] { MenuItem.class,
                                          CheckboxMenuItem.class,
                                          Menu.class,
@@ -110,7 +110,7 @@ public class RADMenuComponent extends RADMenuItemComponent implements ComponentC
         if (isReadOnly())
             return RADComponent.NO_NEW_TYPES;
 
-        Class[] classes = supportedMenus.get(new Integer(getMenuItemType()));
+        Class[] classes = supportedMenus.get(Integer.valueOf(getMenuItemType()));
 
         if (classes == null)
             return RADComponent.NO_NEW_TYPES;
@@ -123,7 +123,7 @@ public class RADMenuComponent extends RADMenuItemComponent implements ComponentC
     }
 
     public boolean canAddItem(Class itemType) {
-        Class[] classes = supportedMenus.get(new Integer(getMenuItemType()));
+        Class[] classes = supportedMenus.get(Integer.valueOf(getMenuItemType()));
 
         if (classes != null)
             for (int i=0; i < classes.length; i++)
